[package]
name = "pcodecraft"
version = "0.1.0"
authors = ["Anciety <anciety@starcross.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = []
plain = ["serde"]