[package]
name = "pcodecraft"
version = "0.1.0"
authors = ["Anciety <anciety@starcross.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
cxx = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
dynasm = { version = "1.1.0", optional = true }
dynasmrt = { version = "1.1.0", optional = true }
memmap2 = { version = "0.3.0", optional = true }

[features]
default = ["emu"]
plain = ["serde"]
emu = ["dynasm", "dynasmrt", "memmap2"]
ghidra = ["cxx"]